--- a/Text and ScrollingViews/app/src/main/res/values/strings.xml
+++ b/Text and ScrollingViews/app/src/main/res/values/strings.xml
@@ -1,6 +1,25 @@
 <resources>
     <string name="app_name">Scrolling Views</string>
-    <string name="article_title">Article Title</string>
-    <string name="article_subtitle">Article Subtitle</string>
-    <string name="article_text">Article text</string>
+    <string name="article_title">Beatles Anthology Vol. 1</string>
+    <string name="article_subtitle">Behind That Locked Door: Beatles Rarities!</string>
+    <string name="article_text">In a vault deep inside Abbey Road Studios in London protected by an unmarked
+        triple-locked, police-alarmed door-are something like 400 hours of unreleased
+        Beatles recordings, starting from June 2, 1962 and ending with the very last
+        tracks recorded for the <i>Let It Be</i> album. The best of the best were
+        released by Apple Records in the form of the 3-volume Anthology series. For
+        more information, see the Beatles Time Capsule at <b>www.rockument.com</b>\n\nThis
+        volume starts with the first new Beatle song, \"Free as a Bird\" (based on a John Lenenon
+        demo, found only on <i>The Lost Lennon Tapes Vol. 28,</i> and covers the very earliest
+        historical recordings, outtakes from the first albums, and live recordings from
+        early concerts and BBC Radio sessions.\n\n<b>Highlights include:</b>\n\n<b><i>Cry for
+        a Shadow -</i></b> Many a Beatle fanatic started down the outtake road, like I did,
+        with a first listen to this song. Originally titled \"Beatle Bop\" and recorded in a
+        single session that yielded four songs (the three featured Tony Sheridan with the
+        Beatles as backing band), \"Cry for a Shadow\" is a n instrumental written by Lennon
+        and Harrison, which makes it Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+
+
+    </string>
 </resources>
