--- a/Text and ScrollingViews/app/src/main/res/values/strings.xml
+++ b/Text and ScrollingViews/app/src/main/res/values/strings.xml
@@ -17,7 +17,8 @@
         single session that yielded four songs (the three featured Tony Sheridan with the
         Beatles as backing band), \"Cry for a Shadow\" is a n instrumental written by Lennon
         and Harrison, which makes it Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Excepteur sint occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 
 
